style: end of file 개행 정리 및 IDEA 기본 CodeFormatter로 변경